codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__disabled_slash_command_while_task_running_snapshot.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: blob
---
■ '/model' is disabled while a task is in progress.
